# ecs-meta2env-rs

./: Cargo.toml  README.md  Taskfile.yml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: release.yml
src/: main.rs
test/: container_file.json  task.json  test.py
