[package]
name = "ecs-meta2env-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", default-features = false, features = [
    "blocking",
    "json",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.56.0"
aws-sdk-ssm = "1.55.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
